Ui fixes,  the card number needs to change as we change the position, visual cursor on drag n drop, Save button always disabled for MCQ and YesNo card,  Chart not visible on carousel after opening. After clicking previous/next chart is visible,  Random black boxes appear on screen

--- a/src/assets/css/materialize.css
+++ b/src/assets/css/materialize.css
@@ -12895,11 +12895,6 @@ span.upload-video-lbl {
 body .gu-mirror {
     display: none !important;
 }
-
-
-
-
-
 .video-uploader span {
     padding-top: 9px !important;
     text-align: center;
@@ -12917,3 +12912,7 @@ body .gu-mirror {
 .fullWidth {
     width: 100% !important;
 }
+.container.question-container {
+    cursor: move;
+}
+.material-tooltip{display:none!important}
